2005-10-12  Tom Tromey  <tromey@redhat.com>

	* abi.cc (build_method_call): Use new get_descriptor.  Correctly
	look up class object.  Put 'obj' onto argument list.
	* classobj.cc (get_descriptor): Removed.
	(get_descriptor): Likewise.
	(create_one_field_record): Updated.
	(create_method_throws): Likewise.
	(create_one_method_record): Likewise.
	(create_index_table): Likewise.
	* builtins.hh (tree_builtins::get_descriptor): New methods.

2005-10-11  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_super_invocation): Added argument.
	* tree.hh (tree_generator::visit_super_invocation): Added
	argument.

2005-10-11  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_new_array): Fix evaluation order.

2005-10-11  Tom Tromey  <tromey@redhat.com>

	* tree.cc (build_new_object_array): Build reference to element
	type, not array type.

2005-10-11  Tom Tromey  <tromey@redhat.com>

	* lower.cc (handle_convert): Keep non-converted copy of min/max
	for results.

2005-10-11  Tom Tromey  <tromey@redhat.com>

	* tree.hh (tree_generator::build_arguments): Declare.
	* tree.cc (binary_operator): Force evaluation order.
	(binary_operator): Likewise.  Special case division and mod.
	(visit_arith_binary): Use binary_operator.
	(visit_arith_binary): Likewise.
	(arith_shift): Force evaluation order.
	(visit_op_assignment): Use stabilize_reference; force evaluation
	order.
	(build_arguments): New method.
	(handle_invocation): Use it.
	(build_array_reference): Force evaluation order.

2005-10-11  Tom Tromey  <tromey@redhat.com>

	* lower.cc (handle_convert): Use convert_to_integer.
	* tree.cc (visit_cast): Handle float->integral conversions
	properly.

2005-10-10  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* tree.hh (tree_generator): Remove visit_element() and add dummy
	implementations of new visitor methods.

2005-10-10  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_op_assignment): Use stabilize_reference.

2005-10-10  Tom Tromey  <tromey@redhat.com>
